# plot-tensor

./: README.md  pyproject.toml
src/: plot_tensor.py  pt.py
