[project]
name = "plot-tensor"
version = "0.1.0"
description = "Plot Tensor — visualize multi-dimensional arrays as faceted seaborn line plots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Dan O'Shea", email = "djo.registrationREMOVE@gmail.com"}]
keywords = ["plotting", "visualization", "tensor", "seaborn", "numpy", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
jax = ["jax"]
penzai = ["penzai"]
xarray = ["xarray"]

[project.urls]
Homepage = "https://github.com/djoshea/plot-tensor"
Issues = "https://github.com/djoshea/plot-tensor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/plot_tensor.py" = "plot_tensor.py"

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ty.environment]
root = ["./src"]

[tool.ty.rules]
unresolved-import = "ignore"  # optional deps (jax, penzai, xarray) imported lazily
